--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,18 +1,13 @@
-#spring.datasource.url=jdbc:h2:mem:testdb
-#spring.datasource.driver-class-name=org.h2.Driver
-#spring.datasource.username=informatorio
-#spring.datasource.password=info-pass
-##spring.h2.console.enabled=true
-#spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
+
 spring.datasource.hikari.idle-timeout=10000
 
-spring.datasource.url=jdbc:mysql://localhost/carrito_auth
+spring.datasource.url=jdbc:mysql://localhost/carrito-informatorio
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.datasource.username=root
 spring.datasource.password=admin
 
 spring.jpa.generate-ddl=true
-spring.jpa.hibernate.ddl-auto=create
+spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 spring.data.jpa.repositories.bootstrap-mode=default
 server.error.include-stacktrace=never
